--- a/index.html
+++ b/index.html
@@ -57,27 +57,24 @@
 					<li data-bg-image="images/slider-1.jpg">
 						<div class="container">
 							<div class="slide-content">
-								<h2 class="slide-title">LaboreLabore et dolore magna</h2>
-								<p>Enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi aliquip ex ea commodo consequat duis aute irure dolor in reprehenderit.</p>
-								<a href="#" class="button">See details</a>
+								<h2 class="slide-title">Amirkabir University of Technology IOT Laboratory</h2>
+								<a href="about.html" class="button">About us</a>
 							</div>
 						</div>
 					</li>
 					<li data-bg-image="images/slider-2.jpg">
 						<div class="container">
 							<div class="slide-content">
-								<h2 class="slide-title">LaboreLabore et dolore magna</h2>
-								<p>Enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi aliquip ex ea commodo consequat duis aute irure dolor in reprehenderit.</p>
-								<a href="#" class="button">See details</a>
+								<h2 class="slide-title">Amirkabir University of Technology IOT Laboratory</h2>
+								<a href="about.html" class="button">About us</a>
 							</div>
 						</div>
 					</li>
 					<li data-bg-image="images/slider-3.jpg">
 						<div class="container">
 							<div class="slide-content">
-								<h2 class="slide-title">LaboreLabore et dolore magna</h2>
-								<p>Enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi aliquip ex ea commodo consequat duis aute irure dolor in reprehenderit.</p>
-								<a href="#" class="button">See details</a>
+								<h2 class="slide-title">Amirkabir University of Technology IOT Laboratory</h2>
+								<a href="about.html" class="button">About us</a>
 							</div>
 						</div>
 					</li>
