--- a/contact.html
+++ b/contact.html
@@ -14,8 +14,8 @@ title: Contact
           <div class="boxed-content">
             <h2 class="section-title">Address</h2>
             <address>
-              <p>Company Name INC.</p>
-              <p>423 Avenue Street, Chicago, IL 60610</p>
+              <p>Amirkabir University of Technology</p>
+              <p>424 Hafez Ave, Tehran, Iran, 15875-4413.</p>
             </address>
           </div>
         </div>
