adds bio section for members.

--- a/about.html
+++ b/about.html
@@ -89,7 +89,7 @@ title: About
             <div class="team">
               <img src="{{member.avatar}}" alt="" class="team-image">
               <h3 class="team-name">{{member.name}}</h3>
-              <p></p>
+              <p>{{member.bio}}</p>
               <div class="social-links">
                 <a href="{{member.github}}"><i class="fa fa-github"></i></a>
                 <a href="{{member.linkedin}}"><i class="fa fa-linkedin"></i></a>
