--- a/projects.html
+++ b/projects.html
@@ -23,54 +23,16 @@ title: Projects
 				<div class="fullwidth-block">
 					<div class="container">
 						<div class="project-list">
+							{% for project in site.data.projects %}
 							<div class="project">
 								<div class="project-content">
 									<figure class="project-image"><img src="images/project-1.jpg" alt="Project"></figure>
-									<h3 class="project-title">Tempora incidunt labore dolore</h3>
+									<h3 class="project-title">{{project.title}}</h3>
 									<p>Dignissimos ducimus blanditiis deleniti atque corrupti quos dolores et quas molestias.</p>
 									<a href="project.html" class="button">Learn more</a>
 								</div>
 							</div>
-							<div class="project">
-								<div class="project-content">
-									<figure class="project-image"><img src="images/project-2.jpg" alt="Project"></figure>
-									<h3 class="project-title">Tempora incidunt labore dolore</h3>
-									<p>Dignissimos ducimus blanditiis deleniti atque corrupti quos dolores et quas molestias.</p>
-									<a href="project.html" class="button">Learn more</a>
-								</div>
-							</div>
-							<div class="project">
-								<div class="project-content">
-									<figure class="project-image"><img src="images/project-3.jpg" alt="Project"></figure>
-									<h3 class="project-title">Tempora incidunt labore dolore</h3>
-									<p>Dignissimos ducimus blanditiis deleniti atque corrupti quos dolores et quas molestias.</p>
-									<a href="project.html" class="button">Learn more</a>
-								</div>
-							</div>
-							<div class="project">
-								<div class="project-content">
-									<figure class="project-image"><img src="images/project-4.jpg" alt="Project"></figure>
-									<h3 class="project-title">Tempora incidunt labore dolore</h3>
-									<p>Dignissimos ducimus blanditiis deleniti atque corrupti quos dolores et quas molestias.</p>
-									<a href="project.html" class="button">Learn more</a>
-								</div>
-							</div>
-							<div class="project">
-								<div class="project-content">
-									<figure class="project-image"><img src="images/project-5.jpg" alt="Project"></figure>
-									<h3 class="project-title">Tempora incidunt labore dolore</h3>
-									<p>Dignissimos ducimus blanditiis deleniti atque corrupti quos dolores et quas molestias.</p>
-									<a href="project.html" class="button">Learn more</a>
-								</div>
-							</div>
-							<div class="project">
-								<div class="project-content">
-									<figure class="project-image"><img src="images/project-6.jpg" alt="Project"></figure>
-									<h3 class="project-title">Tempora incidunt labore dolore</h3>
-									<p>Dignissimos ducimus blanditiis deleniti atque corrupti quos dolores et quas molestias.</p>
-									<a href="project.html" class="button">Learn more</a>
-								</div>
-							</div>
+							{% endfor %}
 						</div>
 					</div>
 				</div>
