--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@ layout: default
           <div class="col-md-3 col-sm-6">
             <div class="feature">
               <img src="images/icon-research-small.png" alt="" class="feature-image">
-              <h2 class="feature-title">Research</h2>
+              <h2 class="feature-title">Building Management System</h2>
               <p>Laborum et dolorum fuga harum quidem rerum facilis et expedita distinctio nam libero tempore.</p>
               <a href="" class="button">Learn more</a>
             </div>
@@ -77,7 +77,7 @@ layout: default
           <div class="col-md-3 col-sm-6">
             <div class="feature">
               <img src="images/icon-medicine-small.png" alt="" class="feature-image">
-              <h2 class="feature-title">Medicice</h2>
+              <h2 class="feature-title">Smart Metering</h2>
               <p>Laborum et dolorum fuga harum quidem rerum facilis et expedita distinctio nam libero tempore.</p>
               <a href="" class="button">Learn more</a>
             </div>
@@ -85,7 +85,7 @@ layout: default
           <div class="col-md-3 col-sm-6">
             <div class="feature">
               <img src="images/icon-genetics-small.png" alt="" class="feature-image">
-              <h2 class="feature-title">Genetics</h2>
+              <h2 class="feature-title">Smart Parking</h2>
               <p>Laborum et dolorum fuga harum quidem rerum facilis et expedita distinctio nam libero tempore.</p>
               <a href="" class="button">Learn more</a>
             </div>
@@ -93,7 +93,7 @@ layout: default
           <div class="col-md-3 col-sm-6">
             <div class="feature">
               <img src="images/icon-energy-small.png" alt="" class="feature-image">
-              <h2 class="feature-title">Energy</h2>
+              <h2 class="feature-title">IoT Platform/Middleware</h2>
               <p>Laborum et dolorum fuga harum quidem rerum facilis et expedita distinctio nam libero tempore.</p>
               <a href="" class="button">Learn more</a>
             </div>
