--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@ layout: default
             <div class="feature">
               <img src="images/icon-research-small.png" alt="" class="feature-image">
               <h2 class="feature-title">Building Management System</h2>
-              <p>Laborum et dolorum fuga harum quidem rerum facilis et expedita distinctio nam libero tempore.</p>
+              <p>Laborum et dolorum fuga harum quidem rerum facilis et expedita distinctio.</p>
               <a href="" class="button">Learn more</a>
             </div>
           </div>
@@ -93,7 +93,7 @@ layout: default
           <div class="col-md-3 col-sm-6">
             <div class="feature">
               <img src="images/icon-energy-small.png" alt="" class="feature-image">
-              <h2 class="feature-title">IoT Platform/Middleware</h2>
+              <h2 class="feature-title">IoT Platform</h2>
               <p>Laborum et dolorum fuga harum quidem rerum facilis et expedita distinctio nam libero tempore.</p>
               <a href="" class="button">Learn more</a>
             </div>
