fixes some issues

--- a/project.html
+++ b/project.html
@@ -29,7 +29,7 @@
 				<div class="container">
 					<div class="header-bar">
 						<a href="index.html" class="branding">
-							<img src="images/logo.png" alt="" class="logo">
+							<img src="images/logo.png" alt="Amirkabir University of Technology IoT Laboratory" class="logo">
 							<div class="logo-type">
 								<h1 class="site-title">Company name</h1>
 								<small class="site-description">Tagline goes here</small>
@@ -62,11 +62,11 @@
 			<main class="main-content">
 				<div class="fullwidth-block">
 					<div class="container">
-						<a href="projects.html" class="button back"><img src="images/arrow-back.png" alt="">Back to projects</a>
+						<a href="projects.html" class="button back"><img src="images/arrow-back.png" alt="-">Back to projects</a>
 						<div class="row">
 							<div class="col-md-6">
 								<figure>
-									<img src="images/figure.jpg" alt="">
+									<img src="images/figure.jpg" alt="-">
 								</figure>
 							</div>
 							<div class="col-md-6">
