fixes more issues

--- a/index.html
+++ b/index.html
@@ -134,12 +134,12 @@ layout: default
           <div class="col-md-4">
             <h2 class="section-title">Research summaries</h2>
             <ul class="arrow-list has-border">
-              <li><a href="#">Praesentium voluptatum deleniti atque dolores</a></li>
-              <li><a href="#">Corrupti quos et quas molestias excepturi sint</a></li>
-              <li><a href="#">Occaecati cupiditate non provident similique sunt</a></li>
-              <li><a href="#">Nam libero tempore, cum soluta nobis est eligendi</a></li>
+              <!--<li><a href="#">Praesentium voluptatum deleniti atque dolores</a></li>-->
+              <!--<li><a href="#">Corrupti quos et quas molestias excepturi sint</a></li>-->
+              <!--<li><a href="#">Occaecati cupiditate non provident similique sunt</a></li>-->
+              <!--<li><a href="#">Nam libero tempore, cum soluta nobis est eligendi</a></li>-->
             </ul>
-            <a href="#" class="button">Show more</a>
+            <!--<a href="#" class="button">Show more</a>-->
           </div>
         </div>
       </div>
@@ -149,7 +149,7 @@ layout: default
       <div class="container">
         <h2 class="cta-title">Neque porro quisquam</h2>
         <p>Modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem enim ad minima veniam quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil moles</p>
-        <a href="#" class="button">See details</a>
+        <!--<a href="#" class="button">See details</a>-->
       </div>
     </div>
 
@@ -183,11 +183,11 @@ layout: default
           <div class="widget">
             <h3 class="widget-title">Press room</h3>
             <ul class="arrow-list">
-              <li><a href="#">Accusantium doloremque</a></li>
-              <li><a href="#">Laudantium totam aperiam</a></li>
-              <li><a href="#">Eaque ipsa quae illo inventore</a></li>
-              <li><a href="#">Veritatis et quasi architecto</a></li>
-              <li><a href="#">Vitae dicta sunt explicabo</a></li>
+              <!--<li><a href="#">Accusantium doloremque</a></li>-->
+              <!--<li><a href="#">Laudantium totam aperiam</a></li>-->
+              <!--<li><a href="#">Eaque ipsa quae illo inventore</a></li>-->
+              <!--<li><a href="#">Veritatis et quasi architecto</a></li>-->
+              <!--<li><a href="#">Vitae dicta sunt explicabo</a></li>-->
             </ul>
           </div>
         </div>
@@ -195,11 +195,11 @@ layout: default
           <div class="widget">
             <h3 class="widget-title">Research summary</h3>
             <ul class="arrow-list">
-              <li><a href="#">Accusantium doloremque</a></li>
-              <li><a href="#">Laudantium totam aperiam</a></li>
-              <li><a href="#">Eaque ipsa quae illo inventore</a></li>
-              <li><a href="#">Veritatis et quasi architecto</a></li>
-              <li><a href="#">Vitae dicta sunt explicabo</a></li>
+              <!--<li><a href="#">Accusantium doloremque</a></li>-->
+              <!--<li><a href="#">Laudantium totam aperiam</a></li>-->
+              <!--<li><a href="#">Eaque ipsa quae illo inventore</a></li>-->
+              <!--<li><a href="#">Veritatis et quasi architecto</a></li>-->
+              <!--<li><a href="#">Vitae dicta sunt explicabo</a></li>-->
             </ul>
           </div>
         </div>
