--- a/project.html
+++ b/project.html
@@ -130,11 +130,11 @@
 							<div class="widget">
 								<h3 class="widget-title">Press room</h3>
 								<ul class="arrow-list">
-									<li><a href="#">Accusantium doloremque</a></li> 
-									<li><a href="#">Laudantium totam aperiam</a></li>
-									<li><a href="#">Eaque ipsa quae illo inventore</a></li> 
-									<li><a href="#">Veritatis et quasi architecto</a></li>
-									<li><a href="#">Vitae dicta sunt explicabo</a></li>
+									<!--<li><a href="#">Accusantium doloremque</a></li> -->
+									<!--<li><a href="#">Laudantium totam aperiam</a></li>-->
+									<!--<li><a href="#">Eaque ipsa quae illo inventore</a></li> -->
+									<!--<li><a href="#">Veritatis et quasi architecto</a></li>-->
+									<!--<li><a href="#">Vitae dicta sunt explicabo</a></li>-->
 								</ul>
 							</div>
 						</div>
@@ -142,11 +142,11 @@
 							<div class="widget">
 								<h3 class="widget-title">Research summary</h3>
 								<ul class="arrow-list">
-									<li><a href="#">Accusantium doloremque</a></li> 
-									<li><a href="#">Laudantium totam aperiam</a></li>
-									<li><a href="#">Eaque ipsa quae illo inventore</a></li> 
-									<li><a href="#">Veritatis et quasi architecto</a></li>
-									<li><a href="#">Vitae dicta sunt explicabo</a></li>
+									<!--<li><a href="#">Accusantium doloremque</a></li> -->
+									<!--<li><a href="#">Laudantium totam aperiam</a></li>-->
+									<!--<li><a href="#">Eaque ipsa quae illo inventore</a></li> -->
+									<!--<li><a href="#">Veritatis et quasi architecto</a></li>-->
+									<!--<li><a href="#">Vitae dicta sunt explicabo</a></li>-->
 								</ul>
 							</div>
 						</div>
@@ -155,10 +155,10 @@
 								<h3 class="widget-title">Social media</h3>
 								<p>Deserunt mollitia animi id est laborum dolorum fuga harum quidem rerum facilis.</p>
 								<div class="social-links">
-									<a href="#"><i class="fa fa-facebook"></i></a>
-									<a href="#"><i class="fa fa-twitter"></i></a>
-									<a href="#"><i class="fa fa-google-plus"></i></a>
-									<a href="#"><i class="fa fa-pinterest"></i></a>
+									<!--<a href="#"><i class="fa fa-facebook"></i></a>-->
+									<!--<a href="#"><i class="fa fa-twitter"></i></a>-->
+									<!--<a href="#"><i class="fa fa-google-plus"></i></a>-->
+									<!--<a href="#"><i class="fa fa-pinterest"></i></a>-->
 								</div>
 							</div>
 						</div>
