--- a/index.html
+++ b/index.html
@@ -2,22 +2,22 @@
 layout: default
 ---
 
-<div class="site-content">
+<div class="site-content" xmlns="http://www.w3.org/1999/html">
   <header class="site-header collapsed-nav" data-bg-image="">
     <div class="container">
       <div class="header-bar">
         <a href="index.html" class="branding">
           <img src="images/logo.png" alt="Amirkabir University of Technology IoT Laboratory" class="logo">
           <div class="logo-type">
-            <h1 class="site-title">Amirkabir University of Technology</h1>
-            <small class="site-description">Computer & Information Technology Engineering Department</small>
+            <h1 class="site-title">IOT Research Center</h1>
+            <h6  class="site-description">Amirkabir University of Technology</h6>
+            <h6  class="site-description">Computer & Information Technology Engineering Department</h6>
           </div>
         </a>
 
         <nav class="main-navigation">
           <button class="menu-toggle"><i class="fa fa-bars"></i></button>
           <ul class="menu">
-            <li class="home menu-item current-menu-item"><a href="index.html"><img src="images/home-icon.png" alt="Home"></a></li>
             {% for page in site.pages %}
               {% if page.title %}
                 <li class="menu-item">
@@ -41,7 +41,7 @@ layout: default
           <li data-bg-image="{{image.path | relative_path}}">
             <div class="container">
               <div class="slide-content">
-                <h2 class="slide-title">Amirkabir University of Technology IoT Laboratory</h2>
+                <h2 class="slide-title">Amirkabir University of Technology <br/> IOT Research Center</h2>
                 <a href="about.html" class="button">About us</a>
               </div>
             </div>
@@ -50,43 +50,22 @@ layout: default
       {% endfor %}
     </ul>
   </div>
-
+`
   <main class="main-content">
     <div class="fullwidth-block">
       <div class="container">
+        <h2 class="section-title">Research Groups</h2>
         <div class="row">
+          {% for group in site.data.groups %}
           <div class="col-md-3 col-sm-6">
             <div class="feature">
-              <img src="images/icon-research-small.png" alt="-" class="feature-image">
-              <h2 class="feature-title">Building Management System</h2>
-              <p>Laborum et dolorum fuga harum quidem rerum facilis et expedita distinctio.</p>
-              <a href="" class="button">Learn more</a>
+              <img src="images/{{group.icon}}" alt="-" class="feature-image">
+              <h2 class="feature-title">{{group.name}}</h2>
+              <p>{{group.desc}}</p>
+              <a href="{{group.link}}" class="button">Learn more</a>
             </div>
           </div>
-          <div class="col-md-3 col-sm-6">
-            <div class="feature">
-              <img src="images/icon-medicine-small.png" alt="-" class="feature-image">
-              <h2 class="feature-title">Smart Metering</h2>
-              <p>Laborum et dolorum fuga harum quidem rerum facilis et expedita distinctio nam libero tempore.</p>
-              <a href="" class="button">Learn more</a>
-            </div>
-          </div>
-          <div class="col-md-3 col-sm-6">
-            <div class="feature">
-              <img src="images/icon-genetics-small.png" alt="-" class="feature-image">
-              <h2 class="feature-title">Smart Parking</h2>
-              <p>Laborum et dolorum fuga harum quidem rerum facilis et expedita distinctio nam libero tempore.</p>
-              <a href="" class="button">Learn more</a>
-            </div>
-          </div>
-          <div class="col-md-3 col-sm-6">
-            <div class="feature">
-              <img src="images/icon-energy-small.png" alt="-" class="feature-image">
-              <h2 class="feature-title">IoT Platform</h2>
-              <p>Laborum et dolorum fuga harum quidem rerum facilis et expedita distinctio nam libero tempore.</p>
-              <a href="" class="button">Learn more</a>
-            </div>
-          </div>
+          {% endfor %}
         </div> <!-- .row -->
       </div> <!-- .container -->
     </div> <!-- .fullwidth-block -->
