Little o in IoT.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ layout: default
         <a href="index.html" class="branding">
           <img src="images/logo.png" alt="Amirkabir University of Technology IoT Laboratory" class="logo">
           <div class="logo-type">
-            <h1 class="site-title">IOT Research Center</h1>
+            <h1 class="site-title">IoT Research Center</h1>
             <h6  class="site-description">Amirkabir University of Technology</h6>
             <h6  class="site-description">Computer & Information Technology Engineering Department</h6>
           </div>
