--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ layout: default
           <li data-bg-image="{{image.path | relative_path}}">
             <div class="container">
               <div class="slide-content">
-                <h2 class="slide-title">Amirkabir University of Technology <br/> IOT Research Center</h2>
+                <h2 class="slide-title">Amirkabir University of Technology <br/> IoT Research Center</h2>
                 <a href="about.html" class="button">About us</a>
               </div>
             </div>
