Adds homepage logo.

--- a/about.html
+++ b/about.html
@@ -97,6 +97,9 @@ title: About
                 {% if member.linkedin %}
                 <a href="{{member.linkedin}}"><i class="fa fa-linkedin"></i></a>
                 {% endif %}
+                {% if member.url %}
+                <a href="{{member.url}}"><i class="fa fa-user"></i></a>
+                {% endif %}
               </div>
             </div>
           </div>
