Completes contact page.

--- a/contact.html
+++ b/contact.html
@@ -7,14 +7,13 @@ title: Contact
 
   <div class="fullwidth-block">
     <div class="container">
-      <div class="map" data-latitude="35.702974" data-longitude="51.405547"></div>
+      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1252.742310087674!2d51.40865825634023!3d35.7055297686102!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xb68840e07e8e513!2sComputer+Engineering+%26+IT+Department!5e0!3m2!1sen!2s!4v1549913839864" height="450" frameborder="0" style="border:0; width: 100%;" allowfullscreen></iframe>
 
       <div class="row">
         <div class="col-md-4">
           <div class="boxed-content">
             <h2 class="section-title">Address</h2>
             <address>
-              <p>Amirkabir University of Technology</p>
               <p>424 Hafez Ave, Tehran, Iran, 15875-4413.</p>
             </address>
           </div>
@@ -22,20 +21,25 @@ title: Contact
         <div class="col-md-4">
           <div class="boxed-content">
             <h2 class="section-title">Telephone</h2>
-            <p><strong>Office:</strong> +1 800 321 431</p>
-            <p><strong>Support:</strong> +1 800 903 412</p>
+            <p>
+              <strong>Office:</strong>
+              <a href="tel:+982164542723"></a>+98 21 6454 2723<br>
+            </p>
           </div>
         </div>
         <div class="col-md-4">
           <div class="boxed-content">
             <h2 class="section-title">Email</h2>
-            <p><strong>Office:</strong> <a href="mailto:office@companyname.com">office@companyname.com</a></p>
-            <p><strong>Support:</strong> <a href="mailto:support@companyname.com">support@companyname.com</a></p>
+            <p>
+              <strong>Office:</strong>
+              <a href="mailto:bbakshi@aut.ac.ir">bbakhshi@aut.ac.ir</a>
+            </p>
           </div>
         </div>
       </div>
 
       <div class="row contact-form">
+        <!--
         <form action="#">
           <div class="col-md-4">
             <p><input type="text" placeholder="Your name..."></p>
@@ -51,23 +55,9 @@ title: Contact
             </p>
           </div>
         </form>
-      </div>
-    </div>
-  </div>
-
-  <div class="fullwidth-block" data-bg-color="#edf2f4">
-    <div class="container">
-      <div class="subscribe-form">
-        <h2>Join our newsletter</h2>
-        <form action="#">
-          <input type="text" placeholder="Enter your email">
-          <input type="submit" value="Subscribe">
-        </form>
+        -->
       </div>
     </div>
   </div>
 
 </main> <!-- .main-content -->
-
-
-<script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false&amp;language=en"></script>
