Better about page.

--- a/about.html
+++ b/about.html
@@ -3,11 +3,16 @@ layout: page
 title: About
 ---
 
-<div class="page-head" data-bg-image="images/page-head-1.jpg">
+<div class="page-head" data-bg-image="images/about-header.jpg">
   <div class="container">
     <h2 class="page-title">About us</h2>
-    <small>IoT is cutting edge technology which intent to create connected things network. We want to provide
+    <small>
+      IoT is cutting edge technology which intent to create connected things network. We want to provide
       this technology for people of our country.
+    </small>
+    <br>
+    <small>
+      This lab contains many talented persons who are the best in what they do.
     </small>
   </div>
 </div>
