Updates about page.

--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@ title: About
 ---
 
 <div class="page-head" data-bg-image="images/about-header.jpg">
-  <div class="container">
+  <div class="container" data-bg-color="rgba(0, 0, 0, 0.2)">
     <h2 class="page-title">About us</h2>
     <small>
       IoT is cutting edge technology which intent to create connected things network. We want to provide
@@ -14,6 +14,10 @@ title: About
     <small>
       This lab contains many talented persons who are the best in what they do.
     </small>
+    <hr>
+    <h6 style="text-align: left">
+      Photo by Jessica Ruscello on Unsplash
+    </h6>
   </div>
 </div>
 
